--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://dentistpary.laravel.cloud
+APP_URL=https://dentalhealth-master-9atevb.laravel.cloud
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
