--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,7 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+FILESYSTEM_DISK=s3
 AWS_BUCKET=fls-9f650dcf-cdea-40be-b6ab-a0d9f945174f
 AWS_DEFAULT_REGION=auto
 AWS_ENDPOINT=https://367be3a2035528943240074d0096e0cd.r2.cloudflarestorage.com
